# Python-auto-CLT

./: README.md  jformat.py  jformat_click.py  pyproject.toml  setup.py
HuggingFace_summarize/: pyproject.toml  requirements.txt  setup.py
HuggingFace_summarize/summarize/: main.py
HuggingFace_summarize/summarize.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
jformat.egg-info/: PKG-INFO  SOURCES.txt
