[tool.poetry]
name = "huggingface-summarize"
version = "0.1.0"
description = ""
authors = ["Joey Chen <hangghost@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.43.3"
click = "^8.1.7"
tensorflow = "^2.17.0"
bs4 = "^0.0.2"
tf-keras = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
